--- a/hw8/style.css
+++ b/hw8/style.css
@@ -7,6 +7,7 @@ body {
 
 .boxs {
   margin: 0 auto;
+  margin-top: 10px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   background-color: rgb(100, 100, 100);
